--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "postinstall":"cd ../frontend && npm install && npm run build"
   },
   "dependencies": {
     "express": "^5.1.0",
